fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ h2 {
     align-items: center;
 
     width: 20%;
+    padding: 10px;
 
     border: 0px;
     border-top: 1px;
